@@ -1,3 +1,5 @@
+import org.gradle.api.tasks.PathSensitivity.RELATIVE
+
 plugins {
 	`java-library-conventions`
 	`junit4-compatibility`
@@ -58,6 +60,16 @@ tasks {
 			excludeTags("exclude")
 		}
 		jvmArgs("-Xmx1g")
+	}
+	test {
+		distribution {
+			enabled.set(true)
+			maxLocalExecutors.set(0)
+		}
+		jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+		jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
+		jvmArgs("--add-opens", "java.base/java.nio=ALL-UNNAMED")
+		inputs.dir("src/test/resources").withPathSensitivity(RELATIVE)
 	}
 	test_4_12 {
 		useJUnitPlatform {
